cmake_minimum_required(VERSION 2.8.8)
project(Registration)

set (Registration_VERSION_MAJOR 0)
set (Registration_VERSION_MINOR 1)

include_directories("${PROJECT_SOURCE_DIR}")
include_directories("${PROJECT_BINARY_DIR}")
include_directories("${PROJECT_SOURCE_DIR}/include")
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)

if(CMAKE_COMPILER_IS_GNUCXX)
    if (WIN32)
        #add_definitions(-DWIN32_LEAN_AND_MEAN)
        add_definitions(-DNOGDI)
        add_definitions(-DM_LOG2E=1.44269504088896340736)
        add_definitions(-D__Folder_FWD_DEFINED__)
    else()
        add_definitions(-fPIC)
    endif()
	add_definitions(-O3)
	add_definitions(-g)
	add_definitions(-std=c++1y)
    add_definitions(-Wall)
    add_definitions(-Wno-unused-function)
    add_definitions(-Wno-unused-local-typedefs)
    add_definitions(-Wno-deprecated-declarations)
    add_definitions(-DUSE_CARTAN)
endif()

find_package(Eigen)
find_package(Boost COMPONENTS date_time iostreams serialization system filesystem regex thread)
find_package(PCL COMPONENTS common io filters features keypoints)
find_package(GLEW)
find_package(Graphene)
find_package(OpenMesh)
find_package(OpenGL)
find_package(Cartan)
find_package(Harmont)
find_package(IFCMeshExtract)
find_package(DuraarkRDF)
find_package(E57PCL)
find_package(DuraarkVis)
find_package(DuraarkAssoc)



file (GLOB_RECURSE obj RELATIVE "${PROJECT_SOURCE_DIR}" "src/*.cpp")
if (EIGEN_FOUND AND Boost_FOUND AND GLEW_FOUND AND GRAPHENE_FOUND AND OPENMESH_FOUND AND OPENGL_FOUND AND CARTAN_FOUND AND HARMONT_FOUND AND PCL_FOUND AND IFCMESHEXTRACT_FOUND AND DURAARKRDF_FOUND AND E57PCL_FOUND AND DURAARKVIS_FOUND AND DURAARKASSOC_FOUND)
	include_directories(${EIGEN_INCLUDE_DIRS})
	include_directories(${Boost_INCLUDE_DIRS})
	include_directories(${GLEW_INCLUDE_DIRS})
	include_directories(${GRAPHENE_INCLUDE_DIRS})
	include_directories(${OPENMESH_INCLUDE_DIRS})
	include_directories(${CARTAN_INCLUDE_DIRS})
	include_directories(${HARMONT_INCLUDE_DIRS})
	include_directories(${PCL_INCLUDE_DIRS})
	include_directories(${IFCMESHEXTRACT_INCLUDE_DIRS})
	include_directories(${DURAARKRDF_INCLUDE_DIRS})
	include_directories(${E57PCL_INCLUDE_DIRS})
	include_directories(${DURAARKVIS_INCLUDE_DIRS})
	include_directories(${DURAARKASSOC_INCLUDE_DIRS})

    add_library(Registration SHARED ${obj})
    target_link_libraries(Registration ${EIGEN_LIBRARIES} ${Boost_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${GRAPHENE_LIBRARIES} ${OPENMESH_LIBRARIES} ${CARTAN_LIBRARIES} ${HARMONT_LIBRARIES} ${PCL_LIBRARIES} ${IFCMESHEXTRACT_LIBRARIES} ${DURAARKRDF_LIBRARIES} ${E57PCL_LIBRARIES} ${DURAARKVIS_LIBRARIES} ${DURAARKASSOC_LIBRARIES} "dl")

    if (WIN32)
        install (FILES "${PROJECT_BINARY_DIR}/libRegistration.dll" DESTINATION lib/graphene_modules RENAME "visRegistration.dll")
    else()
        install (FILES "${PROJECT_BINARY_DIR}/libRegistration.so" DESTINATION lib/graphene_modules RENAME "visRegistration.so")
    endif()

endif()
